--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -132,8 +132,7 @@
     gGenDisplay = "none";
     gSections = null;
 
-    // Placeholders
-    gSectionTable = new SelectTable(sectionTable);
+    gSectionTable = new SelectTable(sectionTable, TextGenCode.SectionAction);
     gItemTable = new SelectTable(itemTable);
 
     TextGenEvent.SetEvents();
