--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -132,8 +132,8 @@
     gGenDisplay = "none";
     gSections = null;
 
-    gSectionTable = new SelectTable(sectionTable, TextGenCode.SectionAction);
-    gItemTable = new SelectTable(itemTable);
+    gSectionTable = new SelectTable(sectionTable, TextGenCode.TableAction);
+    gItemTable = new SelectTable(itemTable, TextGenCode.TableAction);
 
     TextGenEvent.SetEvents();
     TextGenEvent.PageTextCols();
