--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -17,12 +17,12 @@
   <link rel="stylesheet" type="text/css" href="CSS/TextGen.css" />
   <script src="../ArgError.js"></script>
   <script src="../LJCCommon.js"></script>
+  <script src="../StringBuilder.js"></script>
   <script src="Script/RepeatItems.js"></script>
   <script src="Script/Replacements.js"></script>
   <script src="Script/Sections.js"></script>
   <script src="Script/TextGenLib.js"></script>
   <script src="Script/SelectTable.js"></script>
-  <script src="Script/StringBuilder.js"></script>
   <script src="Script/TextGenCode.js"></script>
   <script src="Script/TextGenEvent.js"></script>
 </head>
