--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -18,10 +18,10 @@
   <script src="../ArgError.js"></script>
   <script src="../LJCCommon.js"></script>
   <script src="../StringBuilder.js"></script>
-  <script src="Script/RepeatItems.js"></script>
-  <script src="Script/Replacements.js"></script>
-  <script src="Script/Sections.js"></script>
-  <script src="Script/TextGenLib.js"></script>
+  <script src="../TextGenLib/RepeatItems.js"></script>
+  <script src="../TextGenLib/Replacements.js"></script>
+  <script src="../TextGenLib/Sections.js"></script>
+  <script src="../TextGenLib/TextGenLib.js"></script>
   <script src="Script/SelectTable.js"></script>
   <script src="Script/TextGenCode.js"></script>
   <script src="Script/TextGenEvent.js"></script>
