--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -147,6 +147,12 @@
       <p>
         <a href="GenDocEditor/GenDocEdit.html">GenDoc Editor</a>
       </p>
+      <p>
+        <a href="../JavascriptCommon/TextGen/TextGen.html">Online Text Generator</a>
+      </p>
+      <p>
+        <a href="../JavascriptCommon/TextGen/TextGenDoc/index.html">Online Text Generator Tech Doc</a>
+      </p>
     </div>
     <div class="PathText">
       / <a href="../index.html">Home</a>
