--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Replacements.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Replacements.html
@@ -26,7 +26,7 @@
     <div class='SectionContainer'>
       <table class='CodeTable'>
         <tbody>
-          <tr><th class='CodeTable'>Javascript</th></tr>
+          <tr><th class='CodeTable'>JavaScript</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
               class Replacements
