--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/RepeatItems.Add.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/RepeatItems.Add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Sections.Add.html -->
+<!-- RepeatItems.Add.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Add</title>
@@ -15,7 +15,7 @@
     <div class="PathText">
       / <a href="../../../index.html#TextGenLib">TextGen</a>
       / <a href="../TextGenLibClasses.html">TextGenLib</a>
-      / <a href="../Sections.html">Sections</a>
+      / <a href="../RepeatItems.html">RepeatItems</a>
       / Add
     </div>
     <br />
@@ -24,13 +24,13 @@
     </div>
     <br />
     <div id='Title'>Parameters</div>
-    <div class='Text'>name - The Section name (Identifier).</div>
+    <div class='Text'>name - The RepeatItem name (Identifier).</div>
     <br />
     <div class='Text'>Returns</div>
     <br />
     <div class='Text'>
       The added
-      <span class="userType">Section</span>
+      <span class="userType">RepeatItem</span>
       object.
     </div>
     <br />
@@ -51,7 +51,7 @@
     <br />
     <div class='Text'>
       Creates and adds a new
-      <span class="userType">Section</span>
+      <span class="userType">RepeatItem</span>
       object.
       (E)
     </div>
