--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.SortName.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.SortName.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- Sections.Add.html -->
+<!-- Sections.SortName.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Add</title>
+  <title>SortName</title>
   <meta charset="utf-8" />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width" initial-scale=1 />
@@ -16,22 +16,21 @@
       / <a href="../../../index.html#TextGenLib">TextGen</a>
       / <a href="../TextGenLibClasses.html">TextGenLib</a>
       / <a href="../Sections.html">Sections</a>
-      / Add
+      / SortName
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>Method Add</div>
+      <div id='Title'>Method SortName</div>
     </div>
     <br />
     <div id='Title'>Parameters</div>
-    <div class='Text'>name - The Section name (Identifier).</div>
+    <div class='Text'>Compare - The Compare object.</div>
+    <div class='Text'>CompareTo - The CompareTo object.</div>
     <br />
     <div class='Text'>Returns</div>
     <br />
     <div class='Text'>
-      The added
-      <span class="userType">Section</span>
-      object.
+      The integer that indicates the order relationship of the objects.
     </div>
     <br />
     <div class='Text'>Syntax</div>
@@ -42,7 +41,7 @@
           <tr><th class='CodeTable'>JavaScript</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
-              Add(name)
+              static SortName(compare, compareTo)
             </td>
           </tr>
         </tbody>
@@ -50,10 +49,15 @@
     </div>
     <br />
     <div class='Text'>
-      Creates and adds a new
-      <span class="userType">Section</span>
-      object.
-      (E)
+      Sorts the collection on the Section.Name property.
+    </div>
+    <br />
+    <div class='Text'>Remarks</div>
+    <br />
+    <div class='Text'>
+      A negative integer - This instance precedes the compare-to object.<br />
+      Zero               - This instance and the compare-to object have the same position.<br />
+      A postive integer  - This instance follows the compare-to object.
     </div>
     <br />
     <div class="SmallText">
