--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Replacements.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Replacements.html
@@ -66,7 +66,7 @@
       </tr>
     </table>
     <br />
-    <div class='Title1'>Methods<br></div>
+    <div class='Title1'>Data Methods<br></div>
     <table class='ListTable'>
       <tr>
         <td class='ListTable' width='25%'>
@@ -74,6 +74,28 @@
         </td>
         <td class='ListTable'>Adds a new object.</td>
       </tr>
+      <tr>
+        <td class='ListTable' width='25%'>
+          <a href='Methods\Replacements.Delete.html'>Delete</a>
+        </td>
+        <td class='ListTable'>Deletes the matching item.</td>
+      </tr>
+      <tr>
+        <td class='ListTable' width='25%'>
+          <a href='Methods\Replacements.Retrieve.html'>Retrieve</a>
+        </td>
+        <td class='ListTable'>Retrieves the matching item.</td>
+      </tr>
+      <tr>
+        <td class='ListTable' width='25%'>
+          <a href='Methods\Replacements.Search.html'>Search</a>
+        </td>
+        <td class='ListTable'>Retrieves the matching item index.</td>
+      </tr>
+    </table>
+    <br />
+    <div class='Title1'>Collection Methods<br></div>
+    <table class='ListTable'>
       <tr>
         <td class='ListTable' width='25%'>
           <a href='Methods\Replacements.Compare.html'>Compare</a>
@@ -88,27 +110,9 @@
       </tr>
       <tr>
         <td class='ListTable' width='25%'>
-          <a href='Methods\Replacements.Delete.html'>Delete</a>
-        </td>
-        <td class='ListTable'>Deletes the matching item.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
           <a href='Methods\Replacements.Items.html'>Items</a>
         </td>
         <td class='ListTable'>Gets an item by index.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\Replacements.Retrieve.html'>Retrieve</a>
-        </td>
-        <td class='ListTable'>Retrieves the matching item.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\Replacements.Search.html'>Search</a>
-        </td>
-        <td class='ListTable'>Retrieves the matching item index.</td>
       </tr>
       <tr>
         <td class='ListTable' width='25%'>
