--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.Delete.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.Delete.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- Sections.Add.html -->
+<!-- Sections.Delete.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Add</title>
+  <title>Delete</title>
   <meta charset="utf-8" />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width" initial-scale=1 />
@@ -16,33 +16,25 @@
       / <a href="../../../index.html#TextGenLib">TextGen</a>
       / <a href="../TextGenLibClasses.html">TextGenLib</a>
       / <a href="../Sections.html">Sections</a>
-      / Add
+      / Delete
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>Method Add</div>
+      <div id='Title'>Method Delete</div>
     </div>
     <br />
     <div id='Title'>Parameters</div>
-    <div class='Text'>name - The Section name (Identifier).</div>
-    <br />
-    <div class='Text'>Returns</div>
-    <br />
-    <div class='Text'>
-      The added
-      <span class="userType">Section</span>
-      object.
-    </div>
+    <div class='Text'>compareToValue - The key data value.</div>
     <br />
     <div class='Text'>Syntax</div>
     <br />
     <div class='SectionContainer'>
       <table class='CodeTable'>
         <tbody>
-          <tr><th class='CodeTable'>JavaScript</th></tr>
+          <tr><th class='CodeTable'>C#</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
-              Add(name)
+              Delete(compareToValue)
             </td>
           </tr>
         </tbody>
@@ -50,10 +42,7 @@
     </div>
     <br />
     <div class='Text'>
-      Creates and adds a new
-      <span class="userType">Section</span>
-      object.
-      (E)
+      Deletes an item with the supplied name.
     </div>
     <br />
     <div class="SmallText">
@@ -62,6 +51,5 @@
     </div>
     <br />
   </div>
-  <!-- End "page"" -->
 </body>
 </html>
