--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/RepeatItems.Items.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/RepeatItems.Items.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- RepeatItems.Retrieve.html -->
+<!-- Repeatitems.Items.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Retrieve</title>
+  <title>Items</title>
   <meta charset="utf-8" />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width" initial-scale=1 />
@@ -15,20 +15,20 @@
     <div class="PathText">
       / <a href="../../../index.html#TextGenLib">TextGen</a>
       / <a href="../TextGenLibClasses.html">TextGenLib</a>
-      / <a href="../RepeatItems.html">RepeatItems</a>
-      / Retrieve
+      / <a href="../Repeatitems.html">Repeatitems</a>
+      / Items
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>Method Retrieve</div>
+      <div id='Title'>Method Items</div>
     </div>
     <br />
     <div id='Title'>Parameters</div>
-    <div class='Text'>compareToValue - The key data value.</div>
+    <div class='Text'>index - The item index value.</div>
     <br />
     <div class='Text'>Returns</div>
     <br />
-    <div class='Text'>The matching collection item.</div>
+    <div class='Text'>The collection item at the supplied index.</div>
     <br />
     <div class='Text'>Syntax</div>
     <br />
@@ -38,7 +38,7 @@
           <tr><th class='CodeTable'>JavaScript</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
-              Retrieve(compareToValue)
+              Item(index)
             </td>
           </tr>
         </tbody>
@@ -46,7 +46,7 @@
     </div>
     <br />
     <div class='Text'>
-      Retrieves an item with the supplied name.
+      Retrieves an item at the supplied index.
     </div>
     <br />
     <div class="SmallText">
