--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.ctor.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.ctor.html
@@ -36,7 +36,7 @@
     <div class='SectionContainer'>
       <table class='CodeTable'>
         <tbody>
-          <tr><th class='CodeTable'>C#</th></tr>
+          <tr><th class='CodeTable'>JavaScript</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
               public DocAssemblyGroupManager(DbServiceRef dbServiceRef, String dataConfigName, String tableName = DocAssemblyGroup, String schemaName = null)
