--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/RepeatItems.Delete.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/RepeatItems.Delete.html
@@ -31,7 +31,7 @@
     <div class='SectionContainer'>
       <table class='CodeTable'>
         <tbody>
-          <tr><th class='CodeTable'>C#</th></tr>
+          <tr><th class='CodeTable'>JavaScript</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
               Delete(compareToValue)
