--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.Retrieve.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Methods/Sections.Retrieve.html
@@ -35,7 +35,7 @@
     <div class='SectionContainer'>
       <table class='CodeTable'>
         <tbody>
-          <tr><th class='CodeTable'>C#</th></tr>
+          <tr><th class='CodeTable'>JavaScript</th></tr>
           <tr class='CodeTable'>
             <td class='CodeTable'>
               Retrieve(compareToValue)
