--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Sections.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Sections.html
@@ -60,7 +60,7 @@
     <table class='ListTable'>
       <tr>
         <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.constructor.html'>constructor</a>
+          <a href='Methods\Sections.constructor.html'>constructor</a>
         </td>
         <td class='ListTable'>Initializes an object instance with the supplied values.</td>
       </tr>
