--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Replacements.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/Replacements.html
@@ -122,17 +122,8 @@
       </tr>
     </table>
     <div class='Text'>10 Methods</div>
-    <br />
-    <div id='Title'>Properties</div>
-    <table class='ListTable'>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Properties\Replacements.PreviousCount.html'>PreviousCount</a>
-        </td>
-        <td class='ListTable'>The previous count value.</td>
-      </tr>
-    </table>
   </div>
+  <!-- End page -->
   <br />
   <div class="SmallText">
     Copyright &copy Lester J. Clark and Contributors.<br />
