--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/TextGenLib.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGenLib/TextGenLib.html
@@ -84,7 +84,7 @@
       </tr>
     </table>
     <br />
-    <div class='Title1'>Main Processing Methods<br></div>
+    <div class='Title1'>Methods<br></div>
     <table class='ListTable'>
       <tr>
         <td class='ListTable' width='25%'>
@@ -92,77 +92,9 @@
         </td>
         <td class='ListTable'>Generate the output text.</td>
       </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.ProcessItems.html'>ProcessItems</a>
-        </td>
-        <td class='ListTable'>Process the RepeatItems.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.DoReplacements.html'>DoReplacements</a>
-        </td>
-        <td class='ListTable'>Perform the line replacements.</td>
-      </tr>
-    </table>
-    <br />
-    <div class='Title1'>Other Methods<br></div>
-    <table class='ListTable'>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.AddOutput.html'>AddOutput</a>
-        </td>
-        <td class='ListTable'>Add the line to the output.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.IsDirective.html'>IsDirective</a>
-        </td>
-        <td class='ListTable'>Checks if the line has a directive.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.IsSectionBegin.html'>IsSectionBegin</a>
-        </td>
-        <td class='ListTable'>Checks if the line is a SectionBegin.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenLib.IsSectionEnd.html'>IsSectionEnd</a>
-        </td>
-        <td class='ListTable'>Checks if the line is a SectionEnd.</td>
-      </tr>
-    </table>
-    <div class='Text'>12 Methods</div>
-    <br />
-    <div id='Title'>Properties</div>
-    <table class='ListTable'>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Properties\DataAccess.CommentChars.html'>CommentChars</a>
-        </td>
-        <td class='ListTable'>The Comment characters.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Properties\TextGenLib.Lines.html'>Lines</a>
-        </td>
-        <td class='ListTable'>The template lines.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Properties\TextGenLib.Output.html'>Output</a>
-        </td>
-        <td class='ListTable'>The generated text output.</td>
-      </tr>
-      <tr>
-        <td class='ListTable' width='25%'>
-          <a href='Properties\TextGenLib.Sections.html'>Sections</a>
-        </td>
-        <td class='ListTable'>The data sections.</td>
-      </tr>
     </table>
   </div>
+  <!-- End page -->
   <br />
   <div class="SmallText">
     Copyright &copy Lester J. Clark and Contributors.<br />
