--- a/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGen/TextGenCode.html
+++ b/JavascriptCommon/TextGen/TextGenDoc/HTML/TextGen/TextGenCode.html
@@ -56,7 +56,7 @@
       </tr>
     </table>
     <br />
-    <div class='Title1'>Static Create Table Functions<br></div>
+    <div class='Title1'>Static Create Data Object and Table Functions<br></div>
     <table class='ListTable'>
       <tr>
         <td class='ListTable' width='25%'>
@@ -66,7 +66,7 @@
       </tr>
       <tr>
         <td class='ListTable' width='25%'>
-          <a href='Methods\TextGenCode.CreateReplacementRows.html'>CreateReplacementRowss</a>
+          <a href='Methods\TextGenCode.CreateReplacementRows.html'>CreateReplacementRows</a>
         </td>
         <td class='ListTable'>Creates a table from the Replacements object.</td>
       </tr>
@@ -75,6 +75,12 @@
           <a href='Methods\TextGenCode.CreateSectionRows.html'>CreateSectionRows</a>
         </td>
         <td class='ListTable'>Creates a table from the Sections object.</td>
+      </tr>
+      <tr>
+        <td class='ListTable' width='25%'>
+          <a href='Methods\TextGenCode.CreateSections.html'>CreateSections</a>
+        </td>
+        <td class='ListTable'>Create Sections object from Text Data.</td>
       </tr>
     </table>
     <br />
@@ -105,7 +111,7 @@
         <td class='ListTable'>Shows tab items.</td>
       </tr>
     </table>
-    <div class='Text'>8 Methods</div>
+    <div class='Text'>9 Methods</div>
     <br />
   </div>
   <br />
