--- a/JavascriptCommon/TextGen/TextGen.html
+++ b/JavascriptCommon/TextGen/TextGen.html
@@ -128,10 +128,14 @@
     <div id="createData">Create Data</div>
   </div>
   <script>
+    // Tab displayflags.
     gDataDisplay = "none";
     gGenDisplay = "none";
+
+    // Sections data.
     gSections = null;
 
+    // Select table objects.
     gSectionTable = new SelectTable(sectionTable, TextGenCode.TableAction);
     gItemTable = new SelectTable(itemTable, TextGenCode.TableAction);
 
