--- a/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="CSS/TableLayout.css" />
   <script src="Script/LJCCommon.js"></script>
   <script src="Script/CalcPadCode.js"></script>
+  <script src="Script/CalcPadError.js"></script>
   <script src="Script/CalcPadEvent.js"></script>
 </head>
 <body>
@@ -54,7 +55,6 @@
   <script>
     CalcPadEvent.SetEvents();
     CalcPadEvent.TextCols();
-    calcPadMenu.style.visibility = "hidden";
   </script>
 </body>
 </html>
