--- a/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
@@ -18,6 +18,7 @@
   <!-- cell, firstCell, labelRight, row, table -->
   <link rel="stylesheet" type="text/css" href="CSS/TableLayout.css" />
   <script src="Script/LJCCommon.js"></script>
+  <script src="Script/TextAreaCode.js"></script>
   <script src="Script/CalcPadCode.js"></script>
   <script src="Script/CalcPadError.js"></script>
   <script src="Script/CalcPadEvent.js"></script>
