--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -148,6 +148,9 @@
         <a href="GenDocEditor/GenDocEdit.html">GenDoc Editor</a>
       </p>
       <p>
+        <a href="../CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html">CalcPad</a>
+      </p>
+      <p>
         <a href="../JavascriptCommon/TextGen/TextGen.html">Online Text Generator</a>
       </p>
       <p>
